--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 
+  <script src="./js/temp_obj.js" defer></script>
+  <script src="./dist/main.js" defer></script>
 </head>
 
 <body>
