--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         </div>
 
         <div class="trending-list  video-list">
-          <div class="video-card">
+          <div class="video-card-trending">
             <div class="video-thumb">
               <a class="link-video" href="#">
                 <img src="img/Dude.png" alt="" class="thumbnail">
@@ -353,9 +353,9 @@
             </div>
             <h3 class="video-title">Dude You Re Getting A Telescope</h3>
             <div class="video-info">
-              <span class="video-counter">
+              <span class="video-counter-trending">
                 <span class="video-views">80k views</span>
-                <span class="video-date">3 days ago</span>
+                <span class="video-date-trending">3 days ago</span>
               </span>
               <span class="video-channel">Dollie Blair</span>
             </div>
